[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/OptionCheck.tscn" type="PackedScene" id=1]
[ext_resource path="res://theme/UI.tres" type="Theme" id=2]
[ext_resource path="res://scenes/fps_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Config.gd" type="Script" id=4]
[ext_resource path="res://scenes/Color_picker.tscn" type="PackedScene" id=5]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 5.0
glow_strength = 0.96
glow_blend_mode = 0
glow_hdr_threshold = 0.71
glow_bicubic_upscale = true
glow_high_quality = true

[node name="Config" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -31.0
margin_right = 69.0
margin_bottom = 31.0

[node name="glow" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 138.0
margin_bottom = 12.0
text = "GLOW"

[node name="shaders" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 16.0
margin_right = 138.0
margin_bottom = 28.0
text = "SHADERS"

[node name="fps" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 32.0
margin_right = 138.0
margin_bottom = 44.0
text = "FPS"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 138.0
margin_bottom = 62.0

[node name="p1_color" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 67.0
margin_bottom = 14.0
text = "P1 Color"

[node name="p2_color" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 138.0
margin_bottom = 14.0
text = "P2 Color"

[node name="fps_label" parent="." instance=ExtResource( 3 )]
margin_top = 0.0
margin_bottom = 14.0

[node name="Back" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -18.0
margin_right = 44.0
margin_bottom = -4.0
text = "Back"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Popup" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Color_picker" parent="Popup" instance=ExtResource( 5 )]
unique_name_in_owner = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/p1_color" to="." method="_on_p1_color_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/p2_color" to="." method="_on_p2_color_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="close" from="Popup/Color_picker" to="." method="_on_Color_picker_close"]
